feat: apply patches

--- a/README
+++ b/README
@@ -22,3 +22,10 @@ Afterwards enter the following command to build and install slock
 Running slock
 -------------
 Simply invoke the 'slock' command. To get out of it, enter your password.
+
+Customization
+-------------
+
+1. Add neck user/group.
+2. Message patch
+3. Capslock patch
